[gd_scene load_steps=44 format=3 uid="uid://cu82am0651fpq"]

[ext_resource type="Script" uid="uid://yixqcyd4x06m" path="res://Scrips/Jugador/jugador.gd" id="1_s1vfj"]
[ext_resource type="Script" uid="uid://ce03jsbdwljjk" path="res://Scrips/ManejoVida/Vida.gd" id="2_eexci"]
[ext_resource type="Texture2D" uid="uid://vfobdlxrncha" path="res://Assets/Player/sprite_sheet.png" id="3_uespe"]
[ext_resource type="Script" uid="uid://bdjytlsp754wa" path="res://Scrips/ManejoVida/hitbox.gd" id="4_oolwk"]
[ext_resource type="Script" uid="uid://bw8t5j1fu6e6l" path="res://Scrips/Jugador/CambioColisiones.gd" id="5_eexci"]
[ext_resource type="Script" uid="uid://bramogjdwanei" path="res://Scrips/Jugador/jugador_animacion.gd" id="5_ig1bj"]
[ext_resource type="Script" uid="uid://e8u0byn0dbto" path="res://Scrips/ManejoVida/hurtbox.gd" id="7_b8jmg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4mp40"]
size = Vector2(15, 6)

[sub_resource type="AtlasTexture" id="AtlasTexture_xutah"]
atlas = ExtResource("3_uespe")
region = Rect2(576, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ovq70"]
atlas = ExtResource("3_uespe")
region = Rect2(640, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_as36m"]
atlas = ExtResource("3_uespe")
region = Rect2(576, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gjfif"]
atlas = ExtResource("3_uespe")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4mp40"]
atlas = ExtResource("3_uespe")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_e85mw"]
atlas = ExtResource("3_uespe")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gheh0"]
atlas = ExtResource("3_uespe")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_di65y"]
atlas = ExtResource("3_uespe")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_n5bi1"]
atlas = ExtResource("3_uespe")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dfbng"]
atlas = ExtResource("3_uespe")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_d4beg"]
atlas = ExtResource("3_uespe")
region = Rect2(64, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_3i2lk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xutah")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ovq70")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_as36m")
}],
"loop": true,
"name": &"ataque",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gjfif")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4mp40")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e85mw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gheh0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_di65y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n5bi1")
}],
"loop": false,
"name": &"caminar",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dfbng")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d4beg")
}],
"loop": false,
"name": &"ilde",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s1vfj"]
size = Vector2(13, 6)

[sub_resource type="Animation" id="Animation_t7qj4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"ilde"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HitBox/Golpe:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_xutah"]
resource_name = "ataque"
length = 0.3
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"ataque"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HitBox/Golpe:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_ovq70"]
resource_name = "caminar"
length = 0.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"caminar"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_c868g"]
resource_name = "ilde"
length = 0.2
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"ilde"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_l35hm"]
_data = {
&"RESET": SubResource("Animation_t7qj4"),
&"ataque": SubResource("Animation_xutah"),
&"caminar": SubResource("Animation_ovq70"),
&"ilde": SubResource("Animation_c868g")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ovq70"]
animation = &"ataque"

[sub_resource type="AnimationNodeTimeScale" id="AnimationNodeTimeScale_as36m"]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_gjfif"]
nodes/Animation/node = SubResource("AnimationNodeAnimation_ovq70")
nodes/Animation/position = Vector2(240, 106.667)
nodes/TimeScale/node = SubResource("AnimationNodeTimeScale_as36m")
nodes/TimeScale/position = Vector2(480, 106.667)
nodes/output/position = Vector2(720, 133.333)
node_connections = [&"TimeScale", 0, &"Animation", &"output", 0, &"TimeScale"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_4mp40"]
animation = &"caminar"

[sub_resource type="AnimationNodeTimeScale" id="AnimationNodeTimeScale_e85mw"]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_gheh0"]
nodes/Animation/node = SubResource("AnimationNodeAnimation_4mp40")
nodes/Animation/position = Vector2(240, 106.667)
nodes/TimeScale/node = SubResource("AnimationNodeTimeScale_e85mw")
nodes/TimeScale/position = Vector2(506.667, 106.667)
nodes/output/position = Vector2(746.667, 133.333)
node_connections = [&"TimeScale", 0, &"Animation", &"output", 0, &"TimeScale"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_xutah"]
animation = &"ilde"

[sub_resource type="AnimationNodeTimeScale" id="AnimationNodeTimeScale_ovq70"]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_as36m"]
nodes/Animation/node = SubResource("AnimationNodeAnimation_xutah")
nodes/Animation/position = Vector2(-186.667, 80)
nodes/TimeScale/node = SubResource("AnimationNodeTimeScale_ovq70")
nodes/TimeScale/position = Vector2(133.333, 106.667)
nodes/output/position = Vector2(400, 80)
node_connections = [&"TimeScale", 0, &"Animation", &"output", 0, &"TimeScale"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_s1vfj"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_eexci"]
advance_mode = 2
advance_expression = "!direccion_personaje"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_uespe"]
advance_mode = 2
advance_expression = "direccion_personaje"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_p52f3"]
advance_mode = 2
advance_expression = "atacando"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ig1bj"]
advance_mode = 2
advance_expression = "atacando"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_meqng"]
advance_mode = 2
advance_expression = "!atacando"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_dfbng"]
states/End/position = Vector2(921.333, 100)
states/Start/position = Vector2(125.333, 89.9839)
states/ataque/node = SubResource("AnimationNodeBlendTree_gjfif")
states/ataque/position = Vector2(545.333, 191.434)
states/caminata/node = SubResource("AnimationNodeBlendTree_gheh0")
states/caminata/position = Vector2(279.111, 90.1546)
"states/ilde /node" = SubResource("AnimationNodeBlendTree_as36m")
"states/ilde /position" = Vector2(279.259, 191.145)
transitions = ["Start", "caminata", SubResource("AnimationNodeStateMachineTransition_s1vfj"), "caminata", "ilde ", SubResource("AnimationNodeStateMachineTransition_eexci"), "ilde ", "caminata", SubResource("AnimationNodeStateMachineTransition_uespe"), "ilde ", "ataque", SubResource("AnimationNodeStateMachineTransition_p52f3"), "caminata", "ataque", SubResource("AnimationNodeStateMachineTransition_ig1bj"), "ataque", "ilde ", SubResource("AnimationNodeStateMachineTransition_meqng")]
graph_offset = Vector2(-262.846, 31.3223)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v328t"]
size = Vector2(10, 19)

[node name="Jugador" type="CharacterBody2D"]
collision_layer = 7
script = ExtResource("1_s1vfj")

[node name="Vida" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2_eexci")
vida_maxima = 5

[node name="Collision" type="CollisionShape2D" parent="."]
z_index = 1
position = Vector2(-0.5, 16)
shape = SubResource("RectangleShape2D_4mp40")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
sprite_frames = SubResource("SpriteFrames_3i2lk")
animation = &"ilde"

[node name="HitBox" type="Area2D" parent="AnimatedSprite2D"]
collision_layer = 2
collision_mask = 0
script = ExtResource("4_oolwk")
metadata/_custom_type_script = "uid://bdjytlsp754wa"

[node name="Golpe" type="CollisionShape2D" parent="AnimatedSprite2D/HitBox"]
position = Vector2(15, 4)
shape = SubResource("RectangleShape2D_s1vfj")
disabled = true
script = ExtResource("5_eexci")
viendo_posiocion_izquierda = Vector2(-15, 4)
viendo_posicion_derecha = Vector2(15, 4)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
root_node = NodePath("../AnimatedSprite2D")
libraries = {
&"": SubResource("AnimationLibrary_l35hm")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
root_node = NodePath("%AnimatedSprite2D")
tree_root = SubResource("AnimationNodeStateMachine_dfbng")
advance_expression_base_node = NodePath("..")
anim_player = NodePath("../AnimationPlayer")
parameters/ataque/TimeScale/scale = 1.5
parameters/caminata/TimeScale/scale = 1.0
"parameters/ilde /TimeScale/scale" = 0.2

[node name="Timers" type="Node" parent="."]

[node name="dash_tiempo" type="Timer" parent="Timers"]
wait_time = 0.2

[node name="dash_devuelta" type="Timer" parent="Timers"]
wait_time = 0.5

[node name="ataque_tiempo" type="Timer" parent="Timers"]
wait_time = 0.3

[node name="ataque_devuelta" type="Timer" parent="Timers"]
wait_time = 0.4

[node name="JugadorAnimacion" type="Node" parent="." node_paths=PackedStringArray("animation_tree", "juga", "cambio_colisiones")]
script = ExtResource("5_ig1bj")
animation_tree = NodePath("../AnimationTree")
juga = NodePath("..")
cambio_colisiones = NodePath("../AnimatedSprite2D/HitBox/Golpe")

[node name="Hurtbox" type="Area2D" parent="." node_paths=PackedStringArray("vida")]
collision_layer = 0
collision_mask = 2
script = ExtResource("7_b8jmg")
vida = NodePath("../Vida")
metadata/_custom_type_script = "uid://e8u0byn0dbto"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, 9.5)
shape = SubResource("RectangleShape2D_v328t")

[connection signal="vida_cambio" from="Vida" to="." method="_on_vida_vida_cambio"]
[connection signal="vida_termino" from="Vida" to="." method="_on_vida_vida_termino"]
[connection signal="timeout" from="Timers/dash_tiempo" to="." method="_on_dash_tiempo_timeout"]
[connection signal="timeout" from="Timers/dash_devuelta" to="." method="_on_dash_devuelta_timeout"]
[connection signal="timeout" from="Timers/ataque_tiempo" to="." method="_on_ataque_tiempo_timeout"]
[connection signal="timeout" from="Timers/ataque_devuelta" to="." method="_on_ataque_devuelta_timeout"]
